<resources>
    <string name="app_name">Popular Movies</string>

    <!-- contentDescription for ImageView for movie poster -->
    <string name="movie_poster_desc">Movie Poster</string>

    <!-- contentDescription for trailer image -->
    <string name="trailer_desc">Movie trailer</string>

    <!-- Movie ID -->
    <string name="movie_id">movieID</string>

    <!-- Movie poster -->
    <string name="movie_poster">moviePoster</string>

    <!-- Movie title -->
    <string name="movie_title">movieTitle</string>

    <!-- Movie Release Date -->
    <string name="movie_release_date">movieReleaseDate</string>

    <!-- Movie average vote -->
    <string name="movie_average_vote">movieAverageVote</string>

    <!-- Movie synopsis -->
    <string name="movie_synopsis">movieSynopsis</string>

    <!-- Movie parcel list -->
    <string name="movie_lsit">movieList</string>

    <!-- Placeholder text for movie title -->
    <string name="movie_title_placeholder">Original title</string>

    <!-- Release date label -->
    <string name="release_date_label">Release date</string>

    <!-- Placeholder text for release date of the movie -->
    <string name="release_date_placeholder">02.03.2018.</string>

    <!-- Average vote label -->
    <string name="average_vote_label">Average vote</string>

    <!-- Placeholder text for average votes of the movie -->
    <string name="average_vote_placeholder">7.5</string>

    <!-- Synopsis label -->
    <string name="synopsis_label">Synopsis</string>

    <!-- Placeholder text for synopsis of the movie -->
    <string name="synopsis_placeholder">Some long description</string>

    <!-- Label text for sort by popularity action in the menu -->
    <string name="popularity_sort">Most popular</string>

    <!-- Label text for sort by top rated movies -->
    <string name="top_rated_sort">Top rated</string>

    <!-- Label text for sorting movies as favorites -->
    <string name="favorite">Favorite</string>

    <!-- Username TextView -->
    <string name="username">userName</string>

    <!-- Review TextView -->
    <string name="review">Review text</string>

    <!-- Label for movie trailers -->
    <string name="trailers_label">Trailers</string>

    <!-- Label for reviews in activity_movie_detaily.xml -->
    <string name="review_label">Review</string>

    <!-- Message if reviews don't exist -->
    <string name="no_reviews">There are no any reviews, yet!</string>

    <!-- Message if reviews don't exist for authors -->
    <string name="no_authors">No authors, yet!</string>

    <!-- Message for adding movie to favorites -->
    <string name="add_fav">Added to favorites!</string>

    <!-- Message for removing movie from favorites -->
    <string name="remove_fav">Removed from favorites!</string>
</resources>
