<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context="com.example.android.popularmovies1.MovieDetails">

        <ImageView
            android:id="@+id/poster_detail"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/padding_margin_16dp"
            android:layout_marginLeft="@dimen/padding_margin_16dp"
            android:layout_marginStart="@dimen/padding_margin_16dp"
            android:layout_marginTop="@dimen/padding_margin_16dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorLabel"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poster_detail"
            tools:text="@string/movie_title_placeholder" />

        <TextView
            android:id="@+id/release_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_margin_16dp"
            android:fontFamily="sans-serif"
            android:text="@string/release_date_label"
            android:textColor="#000"
            android:textSize="@dimen/label_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/title_detail"
            app:layout_constraintTop_toBottomOf="@+id/title_detail" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_margin_8dp"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/regular_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/release_date_label"
            app:layout_constraintTop_toBottomOf="@+id/release_date_label"
            tools:text="@string/release_date_placeholder" />

        <TextView
            android:id="@+id/average_vote_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:fontFamily="sans-serif"
            android:text="@string/average_vote_label"
            android:textColor="#000"
            android:textSize="@dimen/label_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/release_date_label"
            app:layout_constraintStart_toEndOf="@+id/release_date_label"
            android:layout_marginLeft="46dp" />

        <TextView
            android:id="@+id/average_vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_margin_8dp"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/regular_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/average_vote_label"
            app:layout_constraintTop_toBottomOf="@+id/average_vote_label"
            tools:text="@string/average_vote_placeholder" />

        <ImageView
            android:id="@+id/fav_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_margin_16dp"
            android:layout_marginTop="@dimen/padding_margin_8dp"
            android:src="@drawable/fav_ic_no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/average_vote_label"
            android:layout_marginRight="@dimen/padding_margin_16dp" />

        <View
            android:id="@+id/viewSynopsis"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="@dimen/padding_margin_8dp"
            android:layout_marginStart="@dimen/padding_margin_8dp"
            android:layout_marginTop="@dimen/padding_margin_16dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/release_date" />

        <TextView
            android:id="@+id/synopsis_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_margin_16dp"
            android:layout_marginTop="@dimen/padding_margin_8dp"
            android:fontFamily="sans-serif"
            android:text="@string/synopsis_label"
            android:textColor="@color/colorLabel"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewSynopsis"
            android:layout_marginLeft="@dimen/padding_margin_16dp" />

        <TextView
            android:id="@+id/synopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_margin_8dp"
            android:layout_marginRight="@dimen/padding_margin_8dp"
            android:layout_marginTop="@dimen/padding_margin_8dp"
            android:paddingBottom="@dimen/padding_margin_16dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/regular_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/synopsis_label"
            app:layout_constraintTop_toBottomOf="@+id/synopsis_label"
            tools:text="@string/synopsis_placeholder" />

        <View
            android:id="@+id/viewReview"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="@dimen/padding_margin_8dp"
            android:layout_marginStart="@dimen/padding_margin_8dp"
            android:layout_marginTop="@dimen/padding_margin_4dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/synopsis" />

        <TextView
            android:id="@+id/trailers_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_margin_16dp"
            android:fontFamily="sans-serif"
            android:text="@string/trailers_label"
            android:textColor="@color/colorLabel"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/viewReview"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="758dp"
            android:layout_marginLeft="@dimen/padding_margin_16dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailers_recycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_margin_8dp"
            android:layout_marginStart="@dimen/padding_margin_16dp"
            android:layout_marginTop="@dimen/padding_margin_4dp"
            android:paddingBottom="@dimen/padding_margin_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trailers_label"
            android:layout_marginRight="@dimen/padding_margin_8dp"
            android:layout_marginLeft="@dimen/padding_margin_16dp" />

        <View
            android:id="@+id/viewTrailers"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="@dimen/padding_margin_8dp"
            android:layout_marginStart="@dimen/padding_margin_8dp"
            android:layout_marginTop="@dimen/padding_margin_4dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trailers_recycle" />

        <TextView
            android:id="@+id/review_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_margin_16dp"
            android:fontFamily="sans-serif"
            android:text="@string/review_label"
            android:textColor="@color/colorLabel"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewTrailers"
            tools:layout_editor_absoluteY="521dp"
            android:layout_marginLeft="@dimen/padding_margin_16dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/review_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_margin_8dp"
            android:layout_marginLeft="@dimen/padding_margin_16dp"
            android:layout_marginRight="@dimen/padding_margin_8dp"
            android:layout_marginStart="@dimen/padding_margin_16dp"
            android:layout_marginTop="@dimen/padding_margin_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review_label" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
